# industrial-knowledge_intelligence_platform

./: .env.example  .gitignore  README.md  _demo_Chemical_Plants.sql  _demo_Compressors.sql  _demo_Turbines.sql  _enq_Chemical_Plants.json  _enq_Compressors.json  _enq_Turbines.json  _enq_batch.json  _gap_domains.sql  _gap_lookup.sql  _ids_Chemical_Plants.sql  _ids_Compressors.sql  _ids_Turbines.sql  curated_gap_manifest.txt  demo_balance_ids.txt  docker-compose.yml  gap_enqueue_ids.txt  gap_monitor_log.txt  gap_run_baseline.json  high_value_ids.txt  index_monitor.txt
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_document_parse_results.py  bda52b107059_initial_sor_schema.py  c2d3e4f5a6b7_add_phase2_document_intelligence.py  d4e5f6a7b8c9_add_phase4_industrial_ai.py  e5f6a7b8c9d0_add_phase5_enterprise.py
backend/app/: __init__.py  main.py
backend/app/admin/: __init__.py  routes.py  schemas.py  service.py
backend/app/agents/: __init__.py  compliance_engine.py  compliance_routes.py  copilot.py  graph.py  multi_hop.py  router.py  routes.py  schemas.py  tools.py  verify.py
backend/app/api/: __init__.py  router.py
backend/app/audit/: __init__.py  service.py
backend/app/auth/: __init__.py  acl.py  dependencies.py  routes.py  schemas.py  security.py  service.py
backend/app/cache/: __init__.py  service.py
backend/app/citations/: __init__.py  service.py
backend/app/core/: __init__.py  config.py  dependencies.py  error_handlers.py  exceptions.py  llm.py  middleware.py  rate_limit.py  responses.py
backend/app/dashboard/: analytics.py  analytics_routes.py  service.py
backend/app/db/: __init__.py  base.py  seed.py  seed_cli.py  session.py
backend/app/documents/: classification.py  routes.py
backend/scripts/: curate_gap_domains.py  fast_enqueue_high_value.ps1  fast_path_midnight.ps1  reenqueue_uploaded.py  reset_qdrant_collection.py  validate_phase2_hero.py  validate_phase4_hero.py  validate_phase5_enterprise.py
backend/tests/: test_auth.py  test_database.py  test_embeddings_provider.py  test_foundation.py  test_llm_providers.py  test_ocr_fallback.py  test_parsing.py  test_phase2_intelligence.py  test_phase4_industrial_ai.py  test_phase5_enterprise.py  test_smoke.py  test_storage.py
docs/: ARCHITECTURE.md  (+2 more)
(+126 files in other folders)
