[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-brain-ai"
version = "0.1.0"
description = "Industrial Brain AI — Industrial Knowledge Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
  "celery>=5.4.0",
  "redis>=5.2.0",
  "PyJWT>=2.9.0",
  "bcrypt>=4.2.0",
  "email-validator>=2.2.0",
  "boto3>=1.35.0",
  "azure-storage-blob>=12.23.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "black>=24.10.0",
  "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py311"]
extend-exclude = "/alembic/versions/"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
